# nasa-service

./: Cargo.toml  README.md  config.toml
.github/workflows/: rust_test.yml
migrations/: 0001_apod_table.sql  20260510210923_create_apod.sql
src/: app.rs  app_state.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs
src/db/: database.rs  mod.rs
src/routes/: health.rs
